Fix direct access to paths other than /

--- a/index.html
+++ b/index.html
@@ -6,6 +6,26 @@
     <title>
       Comic Strip Library - Digital Collection of Classic Comic Strips
     </title>
+    <script type="text/javascript">
+      // This allows paths other than `/` to work with the single page app
+      // See public/404.html for the redirect counterpart
+      ((l) => {
+        if (l.search[1] === "/") {
+          const decoded = l.search
+            .slice(1)
+            .split("&")
+            .map((s) => {
+              return s.replace(/~and~/g, "&");
+            })
+            .join("?");
+          window.history.replaceState(
+            null,
+            null,
+            l.pathname.slice(0, -1) + decoded + l.hash,
+          );
+        }
+      })(window.location);
+    </script>
   </head>
   <body>
     <div id="root"></div>
